--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
     "expo": "^27.0.1",
+    "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-check-box": "^2.1.0",
+    "react-native-ratings": "^5.3.0",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.2.0"
+    "react-navigation": "^2.2.0",
+    "styled-components": "^3.3.2"
   }
 }
