--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-check-box": "^2.1.0",
+    "react-native-modal-datetime-picker": "^5.1.0",
     "react-native-ratings": "^5.3.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.2.0",
